tests/baselines/reference/invalidNestedModules.errors.txt
tests/cases/conformance/internalModules/moduleDeclarations/invalidNestedModules.ts(1,12): error TS2434: A module declaration cannot be located prior to a class or function with which it is merged
tests/cases/conformance/internalModules/moduleDeclarations/invalidNestedModules.ts(24,20): error TS2300: Duplicate identifier 'Point'.


==== tests/cases/conformance/internalModules/moduleDeclarations/invalidNestedModules.ts (2 errors) ====
    module A.B.C {
               ~
!!! error TS2434: A module declaration cannot be located prior to a class or function with which it is merged
        export class Point {
            x: number;
            y: number;
        }
    }
    
    module A {
        export module B {
            export class C { // Error
                name: string;
            }
        }
    }
    
    module M2.X {
        export class Point {
            x: number; y: number;
        }
    }
    
    module M2 {
        export module X {
            export var Point: number; // Error
                       ~~~~~
!!! error TS2300: Duplicate identifier 'Point'.
        }
    }
    
    
    